# CodeAnalyzeAgent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: GLM5_TEST_REPORT.md  INTEGRATION_TEST_REPORT.md  PRD.md  TECHNICAL_DESIGN.md  TEST_REPORT.md
docs/api/: API.md
docs/design/: TDD.md
frontend/: README.md  app.js  index.html  styles.css
src/: config.py
src/agent/: __init__.py  context_manager.py  core.py  parallel.py  session.py
src/alert/: __init__.py  analyzer.py  error_patterns.py  knowledge_base.py  stack_parser.py
src/api/: __init__.py  main.py
src/api/routes/: agents.py  repos.py  sessions.py
src/cache/: __init__.py  backend.py  config.py  decorators.py  disk_backend.py  manager.py  memory_backend.py
src/db/: __init__.py  base.py  models.py
src/index/: __init__.py  dependency_graph.py  manager.py  symbol_index.py
src/llm/: __init__.py  anthropic_adapter.py  azure_adapter.py  base.py  company_adapter.py  custom_adapter.py  factory.py  openai_adapter.py
src/schemas/: __init__.py  agent.py  common.py  repo.py  session.py
src/services/: __init__.py  agent_service.py  repo_service.py  session_service.py
src/tools/: __init__.py  base.py  code_search.py  fast_symbol_lookup.py  file_finder.py  file_reader.py  symbol_lookup.py
tests/: __init__.py  conftest.py
